fix block video icon wrapping

--- a/www/less/components/timeline.less
+++ b/www/less/components/timeline.less
@@ -2,6 +2,7 @@
   .timeline-item {
 	.clearfix;
 	margin-bottom: 30px;
+	min-width: 550px;
 	&:last-of-type {
 	  .timeline-content {
 		&:after {
